--- a/mainPage.css
+++ b/mainPage.css
@@ -88,11 +88,11 @@ a:hover{
 
 img{
   float: left;
-  width: 200px;
   margin: 15px;
 }
-.page img{
+.farm-lab-photos{
   border: gray 3px solid;
+  height: 200px;
 }
 .secondaryNavTabs{
   margin-top: 40px;
